[package]
name = "blinky"
version = "0.1.0"
edition = "2021"
license = " BSL-1.0 license"

[dependencies]
defmt = "=0.3.6"
defmt-rtt = "=0.4.0"
critical-section = { version = "=1.1.2", features = [ "restore-state-bool" ] }

[dependencies.bw-r-drivers-tc37x]
git = "ssh://git@git.bwlocal.it/bw-rust/bw-r-drivers-tc37x.git"
rev = "aba581d7fd0ebe19d995838fea10954594ace445"
features = ["log_with_defmt"]

[dependencies.embedded-hal]
package = "embedded-hal"
git = "https://github.com/rust-embedded/embedded-hal.git"
rev = "v1.0.0-rc.1"
