[package]
name = "can"
version = "0.1.0"
edition = "2021"
license = " BSL-1.0 license"

[dependencies]
embedded-can = "=0.4.1"
defmt = "=0.3.6"
defmt-rtt = "=0.4.0"
critical-section = { version = "=1.1.2", features = [ "restore-state-bool" ] }

[dependencies.bw-r-rt-example]
path = "../../bw-r-rt-example"

[dependencies.bw-r-drivers-tc37x]
path = "../../bw-r-drivers-tc37x"
features = ["log_with_defmt"]
