[package]
name = "can_loopback"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"

[dependencies]
defmt = "=0.3.6"
defmt-rtt = "=0.4.0"
critical-section = { version = "=1.1.2", features = [ "restore-state-bool" ] }

[dependencies.bw-r-drivers-tc37x]
git = "https://github.com/bluewind-embedded-systems/bw-r-drivers-tc37x.git"
branch = "main"
features = ["log_with_defmt"]
