[package]
name = "can_loopback"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"

[dependencies]
defmt = "=0.3.6"
defmt-rtt = "=0.4.0"
critical-section = { version = "=1.1.2", features = [ "restore-state-bool" ] }

[dependencies.bw-r-drivers-tc37x]
registry = "bluewind"
version = "0.1.0"
features = [
  "log_with_defmt",
] 